--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
         <meta name="google-site-verification" content="TfwknlfnF0aGuoQcclajv_00HvyPnq3aAEbfzvRS3FY" />
 
-  	    <!-- Facebook Meta Tags -->
-        <meta property="og:title" content="Albion Online Resource Refining Calculator">
+  	    <meta property="og:title" content="Albion Online Resource Refining Calculator">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://brannstroom.github.io/albiononline-refining-calculator/">
         <meta property="og:description" content="An efficient and easy-to-use Resource Refining Calculator for Albion Online! Refine resources and maximize your profits with many useful features to calculate profits, focus cost, and more. Craft smarter and increase your profits. ">
@@ -23,7 +22,6 @@
         <meta property="og:locale" content="en_US" />
         <meta property="og:site_name" content="Albion Online Resource Refining Calculator">
 
-        <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:domain" content="https://brannstroom.github.io/albiononline-refining-calculator/">
         <meta property="twitter:url" content="https://brannstroom.github.io/albiononline-refining-calculator/">
@@ -175,7 +173,7 @@
                 <br>
 
                 <div>
-                    <label class="text-label" for="profile-settings-detail-columns">Show detail columns</label>
+                    <label class="text-label" for="profile-settings-detail-columns">Show Buy Order Detail</label>
                     <label class="switch">
                         <input type="checkbox" id="profile-settings-detail-columns" onchange="toggleColumns('detail');saveSettings(this);">
                         <span class="slider round"></span>
@@ -306,7 +304,7 @@
                     <th>TIER</th>
                     <th>RESOURCE</th>
                     <th>PRICE</th>
-                    <th>PRODUCT</th>
+                    <th class="buy-order-column">BUY ORDER PRICE</th> <th class="buy-order-column">BUY INSTANT UNTIL</th> <th>PRODUCT</th>
                     <th>PRICE</th>
                     <th>PROFIT</th>
                     <th>PROFIT %</th>
